test/libsolidity/syntaxTests/inlineAssembly/function_call_not_found.sol
contract C {
  function f() public pure {
    assembly {
      k()
    }
  }
}
// ----
// DeclarationError 4619: (63-64): Function "k" not found.
